--- a/package.json
+++ b/package.json
@@ -1,18 +1,51 @@
 {
-  "dependencies": {
-    "express": "^4.18.2"
-  },
+ 
   "name": "loja-games",
+ 
   "type": "module",
+ 
   "version": "1.0.0",
+ 
   "main": "index.js",
-  "devDependencies": {},
-  "scripts": {
-    "pato": "node --watch server/src/server.js"
-
+ 
+  "devDependencies": {
+ 
+   
+  "@types/node": "^20.8.6",
+ 
+   
+  "prisma": "^5.4.2",
+ 
+   
+  "ts-node": "^10.9.1",
+ 
+   
+  "typescript": "^5.2.2"
+ 
   },
+ 
+  "dependencies": {
+ 
+   
+  "@prisma/client": "^5.4.2",
+ 
+   
+  "express": "^4.18.2"
+ 
+  },
+ 
+  "scripts": {
+ 
+   
+  "pato": "node --watch server/src/server.js"
+ 
+  },
+ 
   "keywords": [],
+ 
   "author": "",
+ 
   "license": "ISC",
+ 
   "description": ""
 }
